# product-api/swagger.yaml
@@ -79,32 +79,6 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - product
-    put:
-      description: Update a products details
-      operationId: updateProduct
-      parameters:
-      - description: |-
-          Product data structure to Update or Create.
-          Note: the id field is ignored by update and create operations
-        in: body
-        name: Body
-        required: true
-        schema:
-          $ref: '#/definitions/Product'
-      - description: The id of product for which the operation relates
-        format: int64
-        in: path
-        name: id
-        required: true
-        type: integer
-        x-go-name: ID
-      responses:
-        "201":
-          $ref: '#/responses/noContentResponse'
-        "404":
-          $ref: '#/responses/errorResponse'
-      tags:
-      - product
   /product/{id}:
     delete:
       description: Update a products details
@@ -140,6 +114,32 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productResponse'
+        "404":
+          $ref: '#/responses/errorResponse'
+      tags:
+      - product
+    put:
+      description: Update a products details
+      operationId: updateProduct
+      parameters:
+      - description: |-
+          Product data structure to Update or Create.
+          Note: the id field is ignored by update and create operations
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of product for which the operation relates
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "201":
+          $ref: '#/responses/noContentResponse'
         "404":
           $ref: '#/responses/errorResponse'
       tags:
